Fix container height on small screens

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,11 @@
+@import "./style/abstracts/all";
+
 :local(.container) {
   position: absolute;
-  height: calc(100% - 64px);
+  height: calc(100% - 56px);
+  @media (min-width: $screen-sm) {
+    height: calc(100% - 64px);
+  }
   overflow-y: scroll;
   width: 100%;
 }
